--- a/Wk2_Lab.ipynb
+++ b/Wk2_Lab.ipynb
@@ -66,8 +66,8 @@
     }
    ],
    "source": [
-    "page_list = numpy.arange(1,15,1)\n",
-    "page_list\n",
+    "def last_page(button_link):\n",
+    "    next_button\n",
     "\n",
     "base_url = 'https://visitseattle.org/events/page/'\n",
     "\n",
